--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -9,9 +9,6 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0" />
         <link
-            rel="stylesheet"
-            href="products.css" />
-        <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
@@ -51,15 +48,25 @@
                             <a
                                 class="nav-link active"
                                 aria-current="page"
-                                href="#"
+                                href="/"
                                 >Products</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a
+                                class="nav-link active"
+                                aria-current="page"
+                                href="/new"
+                                >Add New</a
                             >
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="container">
+        <div
+            class="container"
+            style="margin: 24px">
             <!-- Placeholder for rendering other ejs views -->
             <%-body%>
         </div>
