Used middleware to authenticate the requests.

--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -27,7 +27,7 @@
             <div class="container-fluid">
                 <a
                     class="navbar-brand"
-                    href="#"
+                    href="/"
                     >Inventory App</a
                 >
                 <button
