--- a/src/views/new-product.ejs
+++ b/src/views/new-product.ejs
@@ -1,4 +1,13 @@
 <h1 class="mt-5 mb-4">Add New Product</h1>
+
+<% if(errorMessage){ %>
+<div
+    class="alert alert-danger"
+    role="alert">
+    <%= errorMessage%>
+</div>
+<%}%>
+
 <form
     action="/"
     method="post">
@@ -12,8 +21,7 @@
             type="text"
             class="form-control"
             id="name"
-            name="name"
-            required />
+            name="name" />
     </div>
     <div class="mb-3">
         <label
@@ -25,8 +33,7 @@
             class="form-control"
             id="desc"
             name="desc"
-            rows="3"
-            required></textarea>
+            rows="3"></textarea>
     </div>
     <div class="mb-3">
         <label
@@ -38,10 +45,7 @@
             type="number"
             class="form-control"
             id="price"
-            name="price"
-            step="0.01"
-            min="0"
-            required />
+            name="price" />
     </div>
     <div class="mb-3">
         <label
@@ -50,11 +54,9 @@
             >Image URL</label
         >
         <input
-            type="url"
             class="form-control"
             id="imageUrl"
-            name="imageUrl"
-            required />
+            name="imageUrl" />
     </div>
     <button
         type="submit"
