--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -6,6 +6,7 @@
             <th scope="col">Description</th>
             <th scope="col">Price</th>
             <th scope="col">Image</th>
+            <th scope="col">Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -19,6 +20,25 @@
                 <img
                     style="width: 80px"
                     src="<%= product.imageUrl %>" />
+            </td>
+            <td>
+                <a
+                    href="/update-product/<%= product.id%>"
+                    class="btn btn-warning"
+                    >Update</a
+                >
+
+                <button
+                    class="btn btn-danger"
+                    onclick="deleteProduct('<%=product.id%>')">
+                    Delete
+                </button>
+
+                <!-- <a
+                    href="/delete-product/<%= product.id%>"
+                    class="btn btn-danger"
+                    >Delete</a
+                > -->
             </td>
         </tr>
         <% }) %>
