added file adding feature in the project.

--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -17,9 +17,7 @@
             <td><%= product.desc%></td>
             <td scope="col"><%= product.price%></td>
             <td>
-                <img
-                    style="width: 80px"
-                    src="<%= product.imageUrl %>" />
+                <img style="width: 80px" src="<%= product.imageUrl %>" />
             </td>
             <td>
                 <a
