--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -2,21 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta
-            http-equiv="X-UA-Compatible"
-            content="IE=edge" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
             crossorigin="anonymous" />
         <script src="main.js"></script>
-        <link
-            rel="stylesheet"
-            href="/css/headers.css" />
+        <link rel="stylesheet" href="/css/headers.css" />
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
@@ -29,11 +23,7 @@
             class="navbar navbar-expand-lg bg-body-tertiary bg-dark"
             data-bs-theme="dark">
             <div class="container-fluid">
-                <a
-                    class="navbar-brand"
-                    href="/"
-                    >Inventory App</a
-                >
+                <a class="navbar-brand" href="/">Inventory App</a>
                 <button
                     class="navbar-toggler"
                     type="button"
@@ -68,9 +58,7 @@
                 </div>
             </div>
         </nav>
-        <div
-            class="container"
-            style="margin: 24px">
+        <div class="container" style="margin: 24px">
             <!-- Placeholder for rendering other ejs views -->
             <%-body%>
         </div>
