--- a/src/views/new-product.ejs
+++ b/src/views/new-product.ejs
@@ -1,34 +1,16 @@
 <h1 class="mt-5 mb-4 header">Add New Product</h1>
 
 <% if(errorMessage){ %>
-<div
-    class="alert alert-danger"
-    role="alert">
-    <%= errorMessage%>
-</div>
+<div class="alert alert-danger" role="alert"><%= errorMessage%></div>
 <%}%>
 
-<form
-    action="/"
-    method="post">
+<form action="/" method="post" enctype="multipart/form-data">
     <div class="mb-3">
-        <label
-            for="name"
-            class="form-label"
-            >Product Name</label
-        >
-        <input
-            type="text"
-            class="form-control"
-            id="name"
-            name="name" />
+        <label for="name" class="form-label">Product Name</label>
+        <input type="text" class="form-control" id="name" name="name" />
     </div>
     <div class="mb-3">
-        <label
-            for="desc"
-            class="form-label"
-            >Product Description</label
-        >
+        <label for="desc" class="form-label">Product Description</label>
         <textarea
             class="form-control"
             id="desc"
@@ -36,31 +18,17 @@
             rows="3"></textarea>
     </div>
     <div class="mb-3">
-        <label
-            for="price"
-            class="form-label"
-            >Price</label
-        >
-        <input
-            type="number"
-            class="form-control"
-            id="price"
-            name="price" />
+        <label for="price" class="form-label">Price</label>
+        <input type="number" class="form-control" id="price" name="price" />
     </div>
     <div class="mb-3">
-        <label
-            for="imageUrl"
-            class="form-label"
-            >Image URL</label
-        >
+        <label for="imageUrl" class="form-label">Image URL</label>
         <input
+            type="file"
             class="form-control"
             id="imageUrl"
-            name="imageUrl" />
+            name="imageUrl"
+            accept="images/*" />
     </div>
-    <button
-        type="submit"
-        class="btn btn-primary">
-        Add Product
-    </button>
+    <button type="submit" class="btn btn-primary">Add Product</button>
 </form>
