--- a/src/views/update-product.ejs
+++ b/src/views/update-product.ejs
@@ -1,16 +1,10 @@
 <h1 class="mt-5 mb-4 header">Update Product</h1>
 
 <% if(errorMessage){ %>
-<div
-    class="alert alert-danger"
-    role="alert">
-    <%= errorMessage%>
-</div>
+<div class="alert alert-danger" role="alert"><%= errorMessage%></div>
 <%}%>
 
-<form
-    action="/update-product/"
-    method="post">
+<form action="/update-product/" method="post" enctype="multipart/form-data">
     <div class="mb-3">
         <input
             type="hidden"
@@ -21,11 +15,7 @@
     </div>
 
     <div class="mb-3">
-        <label
-            for="name"
-            class="form-label"
-            >Product Name</label
-        >
+        <label for="name" class="form-label">Product Name</label>
         <input
             type="text"
             class="form-control"
@@ -34,25 +24,13 @@
             value="<%=product.name%>" />
     </div>
     <div class="mb-3">
-        <label
-            for="desc"
-            class="form-label"
-            >Product Description</label
-        >
-        <textarea
-            class="form-control"
-            id="desc"
-            name="desc"
-            rows="3">
+        <label for="desc" class="form-label">Product Description</label>
+        <textarea class="form-control" id="desc" name="desc" rows="3">
 <%=product.desc%>
         </textarea>
     </div>
     <div class="mb-3">
-        <label
-            for="price"
-            class="form-label"
-            >Price</label
-        >
+        <label for="price" class="form-label">Price</label>
         <input
             type="number"
             class="form-control"
@@ -61,20 +39,14 @@
             value="<%=product.price%>" />
     </div>
     <div class="mb-3">
-        <label
-            for="imageUrl"
-            class="form-label"
-            >Image URL</label
-        >
+        <label for="imageUrl" class="form-label">Image URL</label>
         <input
+            type="file"
             class="form-control"
             id="imageUrl"
             name="imageUrl"
-            value="<%=product.imageUrl%>" />
+            value="<%=product.imageUrl%>"
+            accept="images/*" />
     </div>
-    <button
-        type="submit"
-        class="btn btn-primary">
-        Update Product
-    </button>
+    <button type="submit" class="btn btn-primary">Update Product</button>
 </form>
