--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -54,6 +54,22 @@
                                 >Add New</a
                             >
                         </li>
+                        <li class="nav-item">
+                            <a
+                                class="nav-link active"
+                                aria-current="page"
+                                href="/register"
+                                >Register</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a
+                                class="nav-link active"
+                                aria-current="page"
+                                href="/login"
+                                >Login</a
+                            >
+                        </li>
                     </ul>
                 </div>
             </div>
