Logout feature has been added

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -7,7 +7,7 @@
         <label for="email" class="form-label">Email</label>
         <input
             type="email"
-            class="form-control"
+            class="form-control w-50"
             id="email"
             name="email"
             required />
@@ -16,10 +16,10 @@
         <label for="password" class="form-label">Password</label>
         <input
             type="password"
-            class="form-control"
+            class="form-control w-50"
             id="password"
             name="password"
             required />
     </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-primary mt-4">Login</button>
 </form>
