--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -54,6 +54,16 @@
                                 >Add New</a
                             >
                         </li>
+                        <% if(locals.userEmail){ %>
+                        <li class="nav-item">
+                            <a
+                                class="nav-link active"
+                                aria-current="page"
+                                href="/logout"
+                                >Logout</a
+                            >
+                        </li>
+                        <%}else{%>
                         <li class="nav-item">
                             <a
                                 class="nav-link active"
@@ -70,6 +80,7 @@
                                 >Login</a
                             >
                         </li>
+                        <%}%>
                     </ul>
                 </div>
             </div>
