--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -1,3 +1,9 @@
+<%if(locals.lastVisit){%>
+<div class="alert alert-info" role="alert">
+    Time since Last Visit:<%=locals.lastVisit%>
+</div>
+<%}%>
+<h1 class="mt-5 mb-4 header">Products</h1>
 <table class="table table-dark">
     <thead>
         <tr>
